--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             font-size: 16px;
         }
         #game {
-            width: 40ch; /* Increased width to allow more movement */
+            width: 40ch;
             height: 20em;
             white-space: pre;
             font-size: 20px;
@@ -64,19 +64,13 @@
             for (let y = 0; y < height; y++) {
                 let line = "";
                 for (let x = 0; x < width; x++) {
-                    // Render the spaceship, including at the far left edge
                     if (y === height - 1 && x === spaceshipPos) {
-                        if (spaceshipPos === 0) {
-                            line += "<=!=>"; // Render full spaceship at left edge without skipping characters
-                        } else {
-                            line += "<=!=>";
-                            x += 4; // Skip over the rest of the spaceship width for all other positions
-                        }
+                        line += "<=!=>"; // Render full spaceship
                     } else if (bullets.some(b => b.x === x && b.y === y)) {
                         line += "o"; // bullet
                     } else if (enemies.some(e => e.x === x && e.y === y)) {
                         line += "M"; // enemy
-                    } else {
+                    } else if (!(x >= spaceshipPos && x < spaceshipPos + 5)) {
                         line += " "; // empty space
                     }
                 }
@@ -91,9 +85,9 @@
 
         // Move spaceship left and right
         document.addEventListener("keydown", e => {
-            if (e.key === "ArrowLeft" && spaceshipPos + 2 > 0) {
+            if (e.key === "ArrowLeft" && spaceshipPos > 0) {
                 spaceshipPos--; // Move left
-            } else if (e.key === "ArrowRight" && spaceshipPos + 2 < width - 1) {
+            } else if (e.key === "ArrowRight" && spaceshipPos < width - 5) {
                 spaceshipPos++; // Move right
             } else if (e.key === " ") {
                 bullets.push({ x: spaceshipPos + 2, y: height - 2 }); // Fire bullet from center
