--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             color: lime;
             background-color: black;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -17,11 +18,8 @@
             margin: 0;
         }
         #score-area {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-end;
-            margin-right: 20px;
             font-size: 16px;
+            margin-bottom: 10px;
         }
         #game {
             width: 40ch;
@@ -64,13 +62,15 @@
             for (let y = 0; y < height; y++) {
                 let line = "";
                 for (let x = 0; x < width; x++) {
+                    // Render the spaceship
                     if (y === height - 1 && x === spaceshipPos) {
-                        line += "<=!=>"; // Render full spaceship
+                        line += "<=!=>";
+                        x += 4; // Skip the remaining part of the spaceship width
                     } else if (bullets.some(b => b.x === x && b.y === y)) {
                         line += "o"; // bullet
                     } else if (enemies.some(e => e.x === x && e.y === y)) {
                         line += "M"; // enemy
-                    } else if (!(x >= spaceshipPos && x < spaceshipPos + 5)) {
+                    } else {
                         line += " "; // empty space
                     }
                 }
